Specify paypal connection as active only. Remove unused code PayPal UI on home Include rubocop on new files

--- a/app/assets/stylesheets/admin/pages/publisher.scss
+++ b/app/assets/stylesheets/admin/pages/publisher.scss
@@ -1,5 +1,5 @@
-#uphold_status {
-  #uphold_status_display {
+#payout_account_status {
+  #payout_account_status_display {
     vertical-align: top;
     margin-bottom: 5px;
   }
