--- a/app/views/publishers/_paypal_account_panel.html.slim
+++ b/app/views/publishers/_paypal_account_panel.html.slim
@@ -4,9 +4,17 @@
   .dashboard-panel--content
     .status-summary
       - if @publisher.paypal_connection.present?
-        .text = "Paypal account: #{paypal_connection.paypal_account_id}"
-      .action
-        = link_to image_tag("https://www.paypalobjects.com/webstatic/en_US/developer/docs/login/connectwithpaypalbutton.png"), "https://www.sandbox.paypal.com/connect?flowEntry=static&client_id=#{ENV['PAYPAL_CLIENT_ID']}&scope=openid email address https%3A%2F%2Furi.paypal.com%2Fservices%2Fpaypalattributes&redirect_uri=https%3A%2F%2Fbat-publishers-dev.herokuapp.com%2Fpublishers%2Fconnect_callback"
+        = " #{@publisher.paypal_connection.email}"
+        br
+        .text = paypal_status_summary(@publisher)
+        a.disconnect-paypal href="#"
+          = t ".disconnect"
+        script type="text/html" id="disconnect-paypal-js"
+          = render "publishers/disconnect_paypal_modal"
+        = form_for(@publisher, url: disconnect_paypal_publishers_path, html: {id: "disconnect_paypal"}) do |f|
+      - else
+        .action
+          = link_to image_tag("https://www.paypalobjects.com/webstatic/en_US/developer/docs/login/connectwithpaypalbutton.png"), "https://www.sandbox.paypal.com/connect?flowEntry=static&client_id=#{ENV['PAYPAL_CLIENT_ID']}&scope=openid email address https%3A%2F%2Furi.paypal.com%2Fservices%2Fpaypalattributes&redirect_uri=https%3A%2F%2Fbat-publishers-dev.herokuapp.com%2Fpublishers%2Fconnect_callback"
   .dashboard-panel--content
     .last-deposit-date.field
       label= t ".last_deposit_date"
@@ -26,6 +34,3 @@
           / TODO: Make sure this works
           = publisher_converted_last_settlement_balance(@publisher)
           / TODO: Find a way to do linking
-      = link_to(t(".check_balance"), uphold_dashboard_url, class: "btn btn-primary",
-              id: "paypal_check_balance", :"data-piwik-action" => "CheckPaypalBalanceClicked",
-              :"data-piwik-name" => "Clicked", :"data-piwik-value" => "Dashboard")
