--- a/app/views/publisher_mailer/uphold_kyc_incomplete.html.slim
+++ b/app/views/publisher_mailer/uphold_kyc_incomplete.html.slim
@@ -1,6 +1,6 @@
 p.salutation= t "publisher_mailer.shared.salutation", name: @publisher.name
 
-p= t "publisher_mailer.uphold_kyc_incomplete.body_html"
+p= t "publisher_mailer.uphold_kyc_incomplete.body_html", total_amount: @total_amount
 
 div.btn-container= link_to(t(".button"), "https://uphold.com/dashboard/membership", class: "btn-primary btn-login")
 
