--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -421,7 +421,9 @@
           content: "\25CF\00a0";
         }
       }
-
+      .reload-paypal {
+        margin-left: 15px;
+      }
       .action {
         display: inline-block;
         margin-left: 15px;
