--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -99,9 +99,9 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
     /       = render partial: 'payout_status', locals: { payout_report: @payout_report }
     .row
       .col-md.mb-4
-        - if !(@publisher.excluded_from_payout? || @publisher.paypal_locale?)
+        - if !(@publisher.excluded_from_payout? || @publisher.paypal_locale?(params[:locale]))
           = render partial: "uphold_wallet_panel"
-        - elsif @publisher.paypal_locale?
+        - elsif (@publisher.paypal_locale?(params[:locale]))
           = render partial: "paypal_account_panel"
       .col-md.mb-4
         .dashboard-panel--wrapper
