--- a/app/views/publishers/_paypal_account_panel.html.slim
+++ b/app/views/publishers/_paypal_account_panel.html.slim
@@ -1,5 +1,7 @@
 .dashboard-panel--wrapper
-  .dashboard-panel--header
+  .dashboard-panel--header-with-image
+    .dashboard-panel--header-image
+      = image_tag("wallet@2x.png", width: 30, height: 30)
     = t ".heading"
   .dashboard-panel--content
     .status-summary
