--- a/app/views/publishers/_paypal_account_panel.html.slim
+++ b/app/views/publishers/_paypal_account_panel.html.slim
@@ -1,7 +1,7 @@
 .dashboard-panel--wrapper
   .dashboard-panel--header-with-image
     .dashboard-panel--header-image
-      = image_tag("wallet@2x.png", width: 35, height: 35)
+      = image_tag("wallet@2x.png", width: 30, height: 30)
     = t ".heading"
     .dashboard-panel--header-right-aligned-image
       = image_tag("paypal-logo.jpg", width: 55, height: 55)
@@ -9,16 +9,11 @@
     .deposit-date-explanation
       = t ".deposit_date_explanation"
     .status-summary
-      - if @publisher.paypal_connection.present?
-        = @publisher.paypal_connection.email
+      - if @publisher.paypal_connection.verified_account?
+        .text = t(".connected")
+        - if @publisher.paypal_connection.present?
+          = @publisher.paypal_connection.email
         br
-        - if @publisher.paypal_connection.verified_account?
-          .text = t(".connected")
-        - else
-          = link_to t(".unconnected_bank_account"), paypal_account_refresh_path(@publisher.paypal_connection.id)
-      - else
-        .action
-          = link_to image_tag("https://www.paypalobjects.com/webstatic/en_US/developer/docs/login/connectwithpaypalbutton.png"), "#{Rails.application.secrets[:paypal_api_uri]}/connect?flowEntry=static&client_id=#{Rails.application.secrets[:paypal_client_id]}&scope=openid email address https%3A%2F%2Furi.paypal.com%2Fservices%2Fpaypalattributes&redirect_uri=https%3A%2F%2Fbat-publishers-dev.herokuapp.com%2Fpublishers%2Fconnect_callback"
   - if @publisher.paypal_connection.present? && @publisher.paypal_connection.verified_account?
     .dashboard-panel--content
       .last-deposit-date.field
@@ -35,3 +30,11 @@
               span.bat-code= " BAT"
           .converted#last_deposit_converted_amount
             = publisher_converted_last_settlement_balance(@publisher)
+  .wide-action
+    - if @publisher.paypal_connection.nil?
+      = link_to t(".connect_with_paypal"),
+        "#{Rails.application.secrets[:paypal_api_uri]}/connect?flowEntry=static&client_id=#{Rails.application.secrets[:paypal_client_id]}&scope=openid email address https%3A%2F%2Furi.paypal.com%2Fservices%2Fpaypalattributes&redirect_uri=https%3A%2F%2Fbat-publishers-dev.herokuapp.com%2Fpublishers%2Fconnect_callback",
+        class: "btn btn-block btn-primary"
+
+  - if @publisher.paypal_connection.present? && !@publisher.paypal_connection.verified_account?
+    = link_to t(".unconnected_bank_account"), paypal_account_refresh_path(@publisher.paypal_connection.id)
