--- a/app/views/admin/publishers/referrals/index.html.slim
+++ b/app/views/admin/publishers/referrals/index.html.slim
@@ -1,8 +1,42 @@
 .mt-5#publisherHeader data-props=@navigation_view
 
+- if @publisher.promo_registrations.blank?
+  .d-flex.align-items-center
+    = fa_icon 'frown-o 3x', class: 'mr-3'
+    h2.m-0.p-0 This publisher doesn't have any referral codes
+
+
 - if @publisher.promo_registrations.present?
   = hidden_field_tag 'referrals-hidden-tags', @publisher.promo_registrations.has_stats.pluck(:referral_code).to_json
   = hidden_field_tag 'publisher_id', @publisher.id
+
+  .row.mb-4
+    .col
+      .promo-panel-inverted
+        h1.m-0.p-0 Referral Overall Stats
+        .pb-3 Statistics for all referral codes for the publisher over it's lifetime.
+        - stats = publisher_referral_totals(@publisher)
+        table.promo-table.w-100.font-weight-bold
+          tbody
+            tr.promo-selected
+              td CONFIRMED
+              td.promo-panel-number = stats[PromoRegistration::FINALIZED]
+            tr
+             td INSTALLED
+             td.promo-panel-number = stats[PromoRegistration::FIRST_RUNS]
+            tr
+              td DOWNLOADED
+              td.promo-panel-number= stats[PromoRegistration::RETRIEVALS]
+
+
+        .mt-3
+          span="Last updated "
+          = publisher_referrals_last_update(@publisher)
+          span= " ago"
+    .col
+      .promo-panel.h-100
+        .promo-flex-col.h-100#react-promo-panel data-props={publisherId: @publisher.id}.to_json
+        = javascript_pack_tag('referrals/ReferralPanel')
 
 .row
   .col.bot-marg
