--- a/app/views/publishers/_paypal_account_panel.html.slim
+++ b/app/views/publishers/_paypal_account_panel.html.slim
@@ -24,13 +24,15 @@
         .last-deposit-v2--label
           = t ".last_deposit"
         .d-flex.justify-content-start.flex-column
-          div.last-deposit-v2--amount
-            - last_deposit_balance = publisher_last_settlement_bat_balance(@publisher)
-            span = last_deposit_balance
-            - unless last_deposit_balance == I18n.t("helpers.publisher.no_deposit")
-              span = " BAT POINT"
-          div.last-deposit-v2--date
-            label = t(".last_deposit_date") + publisher_last_settlement_date(@publisher)
+          - last_deposit_balance = publisher_last_settlement_bat_balance(@publisher)
+          - if last_deposit_balance == I18n.t("helpers.publisher.no_deposit")
+            div.last-deposit-v2--date
+              label = t(".no_deposit_made_yet")
+          - else
+            div.last-deposit-v2--amount
+              span = last_deposit_balance + " BAT POINT"
+            div.last-deposit-v2--date
+              label = t(".last_deposit_date") + publisher_last_settlement_date(@publisher)
   .wide-action
     - if @publisher.paypal_connection.nil?
       = link_to t(".connect_with_paypal"),
