--- a/app/views/publishers/_paypal_account_panel.html.slim
+++ b/app/views/publishers/_paypal_account_panel.html.slim
@@ -8,7 +8,7 @@
   .dashboard-panel--content#payout_account_status_display
     .deposit-date-explanation
       = t ".deposit_date_explanation"
-    - if @publisher.paypal_connection.verified_account?
+    - if @publisher.paypal_connection.present?
       .d-flex.justify-content-between
         .payout-connected-highlight
           span &#9679;&nbsp
@@ -18,21 +18,26 @@
         .payout-account-disconnect-button
           = link_to t(".disconnect"), paypal_account_disconnect_path(@publisher.paypal_connection.id)
       br
-  - if @publisher.paypal_connection.present? && @publisher.paypal_connection.verified_account?
-    .dashboard-panel--content#last_settlement class=last_settlement_class(@publisher)
-      .last-deposit-v2.d-flex.justify-content-between
-        .last-deposit-v2--label
-          = t ".last_deposit"
-        .d-flex.justify-content-start.flex-column
-          - last_deposit_balance = publisher_last_settlement_bat_balance(@publisher)
-          - if last_deposit_balance == I18n.t("helpers.publisher.no_deposit")
-            div.last-deposit-v2--date
-              label = t(".no_deposit_made_yet")
-          - else
-            div.last-deposit-v2--amount
-              span = last_deposit_balance + " BAT POINT"
-            div.last-deposit-v2--date
-              label = t(".last_deposit_date") + publisher_last_settlement_date(@publisher)
+  - if @publisher.paypal_connection.present? 
+    - if @publisher.paypal_connection.verified_account?
+      .dashboard-panel--content#last_settlement class=last_settlement_class(@publisher)
+        .last-deposit-v2.d-flex.justify-content-between
+          .last-deposit-v2--label
+            = t ".last_deposit"
+          .d-flex.justify-content-start.flex-column
+            - last_deposit_balance = publisher_last_settlement_bat_balance(@publisher)
+            - if last_deposit_balance == I18n.t("helpers.publisher.no_deposit")
+              div.last-deposit-v2--date
+                label = t(".no_deposit_made_yet")
+            - else
+              div.last-deposit-v2--amount
+                span = last_deposit_balance + " BAT POINT"
+              div.last-deposit-v2--date
+                label = t(".last_deposit_date") + publisher_last_settlement_date(@publisher)
+    - else
+      .dashboard-panel--content#last_settlement
+        .last-deposit-v2.last-deposit-v2--no-payout-account
+          = t ".need_bank_account"
   .wide-action
     - if @publisher.paypal_connection.nil?
       = link_to t(".connect_with_paypal"),
@@ -42,6 +47,13 @@
       = link_to t(".view_account_summary"),
         "https://www.paypal.com/myaccount/summary",
         class: "btn btn-block btn-primary"
+    - else
+      = link_to t(".link_bank_account"),
+        "https://www.paypal.com/myaccount/money/banks/new",
+        class: "btn btn-block btn-primary"
 
   - if @publisher.paypal_connection.present? && !@publisher.paypal_connection.verified_account?
-    = link_to t(".unconnected_bank_account"), paypal_account_refresh_path(@publisher.paypal_connection.id)
+    .minor-action.d-flex.justify-content-center
+      = t(".refresh_account_label")
+      span &nbsp
+      = link_to(t(".refresh_account_button"), paypal_account_refresh_path(@publisher.paypal_connection.id))
