--- a/app/views/publishers/_uphold_wallet_panel.html.slim
+++ b/app/views/publishers/_uphold_wallet_panel.html.slim
@@ -1,7 +1,7 @@
 .dashboard-panel--wrapper.uphold-panel
   .dashboard-panel--header#dashboard_uphold_header
     = t ".heading"
-  .dashboard-panel--content#payout_account_status_display
+  .dashboard-panel--content#uphold_status_display
     .status-summary
       .text= uphold_status_summary(@publisher)
       .action
