--- a/app/assets/stylesheets/admin/pages/publisher.scss
+++ b/app/assets/stylesheets/admin/pages/publisher.scss
@@ -1,5 +1,5 @@
-#payout_account_status {
-  #payout_account_status_display {
+#uphold_status {
+  #uphold_status_display {
     vertical-align: top;
     margin-bottom: 5px;
   }
