--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -474,10 +474,8 @@
     font-size: 13px;
   }
 
-
-
-  #payout_account_status {
-    #payout_account_status_display {
+  #uphold_status {
+    #uphold_status_display {
       vertical-align: top;
       margin-bottom: 5px;
     }
