--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -26,7 +26,7 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
 
 .dashboard
 
-  #payout_account_status { class=payout_account_status_class(@publisher)
+  #uphold_status { class=uphold_status_class(@publisher)
                    data-open-confirm-default-currency-modal=(open_confirm_default_currency_modal ? "true" : "false")
                    data-possible-currencies=(@possible_currencies || [])
                    data-default-currency=@publisher.uphold_connection.default_currency }
