--- a/app/views/publishers/_paypal_account_panel.html.slim
+++ b/app/views/publishers/_paypal_account_panel.html.slim
@@ -33,7 +33,7 @@
               div.last-deposit-v2--amount
                 span = last_deposit_balance + " BAT POINT"
               div.last-deposit-v2--date
-                label = t(".last_deposit_date") + publisher_last_settlement_date(@publisher)
+                label = t(".last_deposit_date") + publisher_last_settlement_date(@publisher, params[:locale])
     - else
       .dashboard-panel--content#last_settlement
         .last-deposit-v2.last-deposit-v2--no-payout-account
