--- a/app/views/publishers/home.html.slim
+++ b/app/views/publishers/home.html.slim
@@ -47,7 +47,7 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
                     span = t(".balance_pending")
                   .bat
                     span.bat-amount#bat_amount = publisher_overall_bat_balance(@publisher)
-                    span.bat-code= " BAT"
+                    span.bat-code= " " + I18n.t(".bat_in_locale")
                   .converted#converted_amount
                     = publisher_converted_overall_balance(@publisher)
                   - if payout_in_progress?
@@ -73,7 +73,7 @@ script type="text/html" id="confirm_default_currency_modal_wrapper"
                           span = t('.held_funds')
                       .bat
                         span.withheld-color.bat-amount#bat_amount= publisher_contribution_bat_balance(@publisher)
-                        span.withheld-color.bat-code= " BAT"
+                        span.withheld-color.bat-code= " " + I18n.t(".bat_in_locale")
                   .small.my-2
                     .d-flex
                       - if @case&.open?.present? || @case&.in_progress?&.present?
