--- a/app/views/publishers/_paypal_account_panel.html.slim
+++ b/app/views/publishers/_paypal_account_panel.html.slim
@@ -31,7 +31,7 @@
                 label = t(".no_deposit_made_yet")
             - else
               div.last-deposit-v2--amount
-                span = last_deposit_balance + " BAT POINT"
+                span = last_deposit_balance + " " + t(".bat_points")
               div.last-deposit-v2--date
                 label = t(".last_deposit_date") + publisher_last_settlement_date(@publisher, params[:locale])
     - else
