Remove uphold reference for connected Japanese accounts

--- a/app/views/publishers/_channel.html.slim
+++ b/app/views/publishers/_channel.html.slim
@@ -70,7 +70,7 @@
         .added-date.d-none.d-sm-block
           = t(".added", date: channel.created_at.to_date.iso8601)
           span.mx-2= ' | '
-        - if channel.uphold_connection.present?
+        - if channel.uphold_connection.present? && !current_publisher.uphold_connection.japanese_account?
           =image_tag 'uphold.svg', style: "width: 18px; height: 18px; margin-top: 3px;"
           =link_to(t('.uphold'), "#{uphold_dashboard_url}/cards/#{channel.uphold_connection.card_id}", class: 'px-1', target: "_blank")
           span.mx-2
