--- a/app/views/publishers/email_verified.html.slim
+++ b/app/views/publishers/email_verified.html.slim
@@ -22,8 +22,8 @@
             )
           .form-group
             .form-check
-              = f.check_box(:visible, class: "form-check-input")
-              = f.label(:visible, class: "form-check-label", for: "publisher_visible")
+              = f.check_box(:subscribed_to_marketing_emails, class: "form-check-input")
+              = f.label(:marketing_emails, class: "form-check-label", for: "marketing_emails")
           .form-group.panel-controls
             - if @publisher_created_through_youtube_auth
               - @action = t("shared.continue")
